[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["winhok <2063685743@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.32.3"
jmespath = "^1.0.1"
loguru = "^0.7.2"
pytest = "^8.3.3"
deepdiff = "^8.0.1"
jsonschema = "^4.23.0"
redis = "^5.2.0"
faker = "^33.1.0"
hypothesis = "^6.121.2"
allure-pytest = "^2.13.5"
allure-combine = "^1.0.11"
pycryptodome = "^3.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
